Handle more unicode in names better
The nice display font for main names lacked a lot of the more
interesting characters, outside western Europe. Let's fix that, by
falling back to a more boring sans serif.

--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -21,7 +21,7 @@
   <h1 class="text-center">
     <small>where to find</small>
     <br>
-    {{ object.primary_alias }}
+    <span class="name">{{ object.primary_alias }}</span>
   </h1>
 
   {% include "wheretofindme/_favstar.html" with object=object %}
