--- a/src/scss/_bootswatch.scss
+++ b/src/scss/_bootswatch.scss
@@ -46,6 +46,10 @@ h1 {
   border-color: $secondary !important;
 }
 
+h1 span.name {
+  font-family: $body-font-family;
+}
+
 // Buttons =====================================================================
 
 .btn {
