--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
       <footer class="pt-4 my-md-5 pt-md-5 border-top" role="contentinfo">
         <div class="row">
           <div class="col-12 col-md text-center">
-            <small class="d-block mb-3">&copy; 2018-2019 Kit La Touche</small>
+            <small class="d-block mb-3">&copy; 2018-2022 Kit La Touche</small>
           </div>
         </div>
         <div class="row">
@@ -83,7 +83,7 @@
           <div class="col-12 col-md text-center">
             <small class="d-block mb-3">
               <a href="{% url "tos" %}">Terms of Service</a>
-              <a href="{% url "about" %}">About</a>
+              | <a href="{% url "about" %}">About</a>
             </small>
           </div>
         </div>
