First cut at clarifying deletion [#212]

--- a/templates/tos.html
+++ b/templates/tos.html
@@ -27,14 +27,24 @@
 <p class="text-justify">
   Please be kind.
 </p>
-<h2 class="text-center" id="abuse-and-deletion">Abuse and Deletion</h2>
+<h2 class="text-center" id="deletion">Deletion</h2>
+<p class="text-justify">
+  You can delete your account at any time. Please <a
+  href="mailto:admin@wheretofind.me?subject=Where%20to%20Find%20Me%20removal%20request"
+  >contact us</a>.
+</p>
+<p class="text-justify">
+  We will ask you to demonstrate to our satisfaction that you actually control
+  the identity in question. If you send us the request from one of the accounts listed in the identity, it makes this process easier, but if you no longer have access to those accounts, you can contact us separately and we'll work with you.
+</p>
+
+<h2 class="text-center" id="abuse">Abuse</h2>
 <p class="text-justify">
   If you find that someone has claimed they own an identity that's actually
   yours, please
   <a
     href="mailto:admin@wheretofind.me?subject=Where%20to%20Find%20Me%20removal%20request"
-    >contact us</a> and we will try to resolve the
-  issue.
+    >let us know</a> and we will try to resolve the issue.
 </p>
 <p class="text-justify">
   We will ask you to demonstrate to our satisfaction that you actually control
