--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -96,7 +96,7 @@
   {% endfor %}
 </div>
 <p class="col-md-8 offset-md-2">
-  <small>Added without your consent?
+  <small>Added without your consent? No longer want to be listed?
   <a
     href="mailto:admin@wheretofind.me?subject=Where%20to%20Find%20Me%20removal%20request%20from%20{{ object.username }}"
     >Contact us</a> to remove this entry.</small>
